# tree-parser

./: .gitignore  README.md  pyproject.toml
parsers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tree_parser/: node.py  tree.py  treeparser.py  utils.py
tree_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
